updated CF distribution id

--- a/pipeline/webhosting/pipeline.yaml
+++ b/pipeline/webhosting/pipeline.yaml
@@ -19,7 +19,7 @@ Parameters:
   CloudFrontDistroId:
     Type: String
     Description: CloudFront distribution ID 
-    Default: xxxxxxxx
+    Default: E3LPQ2EQXIYH3B
   GitHubRepo:
     Type: String
     Description: repo name
